# nativ3

./: .gitignore  nativ3-verify-suite.py  nativ3_compiler.py
files/: session6-findings.md
hardware/: hw_job_v2.json  hw_results_v2.json
nativ3-compiler/: .gitignore  LICENSE  README.md  pyproject.toml
nativ3-compiler/nativ3/: __init__.py  cli.py  compiler.py  scanner.py  topology.py  transpiler.py
nativ3-compiler/nativ3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nativ3-compiler/tests/: test_compiler.py  test_scanner.py  test_transpiler.py
nativ3-ide/: package-lock.json  package.json
nativ3-ide/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
nativ3-ide/.next/cache/: .previewinfo  .rscinfo
nativ3-ide/.next/diagnostics/: route-bundle-stats.json
nativ3-ide/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
nativ3-ide/.next/server/app/: _global-error.rsc  _not-found.html  index.html  page_client-reference-manifest.js
nativ3-ide/.next/server/app/_global-error.segments/: __PAGE__.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
nativ3-ide/.next/server/app/_not-found.segments/: _full.segment.rsc  _head.segment.rsc  _tree.segment.rsc
nativ3-ide/.next/server/app/_not-found.segments/_not-found/: __PAGE__.segment.rsc
nativ3-ide/.next/server/app/index.segments/: __PAGE__.segment.rsc  _full.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
nativ3-ide/.next/server/chunks/ssr/: app_layout_04hilog.js  app_layout_04hilog.js.map  app_page_0ucg9k2.js  app_page_0ucg9k2.js.map
nativ3-ide/.next/server/pages/: 500.html
nativ3-ide/.next/static/chunks/: 00g5_gsq5fs7c.js
nativ3-ide/app/: layout.js  nativ3-ide.js  page.js
